Examples/Kubernetes/w_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "home-dev"
  name: hello-world-svc
  labels:
    app: hello-world-svc
spec:
  replicas: 1
  selector:
      matchLabels:
        app: hello-world-svc
  template:
    metadata:
      name: hello-world-svc
      labels:
        app: hello-world-svc
    spec:
      containers:
      - name: hello-world-svc
        image: vad1mo/hello-world-rest
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 5050
        resources:
          limits:
            cpu: 100m
            memory: 100m
          requests:
            cpu: 100m
            memory: 100m
