Examples/Kubernetes/w_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   namespace: sse-uc-dev
   name: sse-uc-dev-ingress
   annotations:
     # ingress.kubernetes.io/rewrite-target: /
     ingress.kubernetes.io/proxy-body-size: "50m"
     # nginx.org/websocket-services: vitel-email-client-socketserver
spec:
   rules:
   - host: "sse-uc-dev.mmih.biz"
     http:
      paths:
      - path: /socketpath/
        backend:
          serviceName: vitel-email-client-socketserver
          servicePort: 8080
